_sass/legacy1.scss
/* ... */
:root :where(.wp-block-site-title a:where(:not(.wp-element-button))) {
    text-decoration: none;
}

:root :where(.wp-block-navigation) {
    font-size: var(--wp--preset--font-size--small);
    font-weight: var(--wp--custom--font-weight--regular);
    letter-spacing: 0.25px;
    line-height: var(--wp--custom--line-height--large);
}

:root :where(.wp-block-navigation-is-layout-flow)> :first-child {
    margin-block-start: 0;
}

:root :where(.wp-block-navigation-is-layout-flow)> :last-child {
    margin-block-end: 0;
}

:root :where(.wp-block-navigation-is-layout-flow)>* {
    margin-block-start: var(--wp--preset--spacing--small);
    margin-block-end: 0;
}

:root :where(.wp-block-navigation-is-layout-constrained)> :first-child {
    margin-block-start: 0;
}

:root :where(.wp-block-navigation-is-layout-constrained)> :last-child {
    margin-block-end: 0;
}

:root :where(.wp-block-navigation-is-layout-constrained)>* {
    margin-block-start: var(--wp--preset--spacing--small);
    margin-block-end: 0;
}

:root :where(.wp-block-navigation-is-layout-flex) {
    gap: var(--wp--preset--spacing--small);
}

:root :where(.wp-block-navigation-is-layout-grid) {
    gap: var(--wp--preset--spacing--small);
}

:root :where(.wp-block-navigation a:where(:not(.wp-element-button))) {
    text-decoration: none;
}

:root :where(.wp-block-post-date) {
    font-size: var(--wp--preset--font-size--x-small);
}

:root :where(.wp-block-post-date a:where(:not(.wp-element-button))) {
    text-decoration: none;
}

:root :where(.wp-block-post-terms) {
    font-size: var(--wp--preset--font-size--x-small);
}

:root :where(.wp-block-post-terms a:where(:not(.wp-element-button))) {
    text-decoration: none;
}

:root :where(.wp-block-post-title a:where(:not(.wp-element-button))) {
    text-decoration: none;
}

:root :where(.wp-block-cover) {
    margin-top: 0;
    margin-bottom: 0;
}

.wp-container-core-group-is-layout-1 {
    flex-wrap: nowrap;
    gap: var(--wp--preset--spacing--xx-small);
}

.wp-container-core-navigation-is-layout-1 {
    gap: var(--wp--preset--spacing--medium);
    justify-content: center;
}

.wp-container-core-group-is-layout-2 {
    flex-wrap: nowrap;
    gap: var(--wp--preset--spacing--large);
    justify-content: flex-end;
}

.wp-container-core-group-is-layout-3 {
    flex-wrap: nowrap;
    justify-content: space-between;
}

.wp-container-core-buttons-is-layout-2 {
    justify-content: center;
}

.wp-container-core-columns-is-layout-1 {
    flex-wrap: nowrap;
    gap: 0 0;
}

.wp-container-core-group-is-layout-6>.alignfull {
    margin-right: calc(var(--wp--preset--spacing--large) * -1);
    margin-left: calc(var(--wp--preset--spacing--large) * -1);
}

.wp-container-core-group-is-layout-7>.alignfull {
    margin-right: calc(var(--wp--preset--spacing--large) * -1);
    margin-left: calc(var(--wp--preset--spacing--large) * -1);
}

.wp-container-core-group-is-layout-8>.alignfull {
    margin-right: calc(var(--wp--preset--spacing--large) * -1);
    margin-left: calc(var(--wp--preset--spacing--large) * -1);
}

.wp-container-core-columns-is-layout-2 {
    flex-wrap: nowrap;
}

.wp-container-content-1 {
    flex-basis: 200px;
}

.wp-container-core-group-is-layout-10 {
    flex-wrap: nowrap;
    gap: 0;
}

.wp-container-content-2 {
    flex-basis: 200px;
}

.wp-container-core-group-is-layout-11 {
    flex-wrap: nowrap;
    gap: 0;
}

.wp-container-core-group-is-layout-12 {
    justify-content: center;
}

.wp-container-core-buttons-is-layout-3 {
    justify-content: center;
    align-items: flex-end;
}

.wp-container-core-group-is-layout-14>.alignfull {
    margin-right: calc(var(--wp--preset--spacing--medium) * -1);
    margin-left: calc(var(--wp--preset--spacing--medium) * -1);
}

.wp-container-core-columns-is-layout-3 {
    flex-wrap: nowrap;
}

.wp-container-core-columns-is-layout-4 {
    flex-wrap: nowrap;
}

.wp-container-core-column-is-layout-12>* {
    margin-block-start: 0;
    margin-block-end: 0;
}

.wp-container-core-column-is-layout-12>*+* {
    margin-block-start: 0;
    margin-block-end: 0;
}

.wp-container-core-columns-is-layout-5 {
    flex-wrap: nowrap;
}

.wp-elements-82b5603708064b06546400967d8e01c5 a:where(:not(.wp-element-button)) {
    color: var(--wp--preset--color--primary);
}

.wp-container-content-3 {
    flex-basis: 3px;
}

.wp-container-core-group-is-layout-16 {
    flex-wrap: nowrap;
}

.wp-container-core-group-is-layout-17>* {
    margin-block-start: 0;
    margin-block-end: 0;
}

.wp-container-core-group-is-layout-17>*+* {
    margin-block-start: var(--wp--preset--spacing--xx-small);
    margin-block-end: 0;
}

.wp-container-content-4 {
    flex-basis: 3px;
}

.wp-container-core-group-is-layout-18 {
    flex-wrap: nowrap;
}

.wp-container-core-group-is-layout-19>* {
    margin-block-start: 0;
    margin-block-end: 0;
}

.wp-container-core-group-is-layout-19>*+* {
    margin-block-start: var(--wp--preset--spacing--xx-small);
    margin-block-end: 0;
}

.wp-container-content-5 {
    flex-basis: 3px;
}

.wp-container-core-group-is-layout-20 {
    flex-wrap: nowrap;
}

.wp-container-core-group-is-layout-21>* {
    margin-block-start: 0;
    margin-block-end: 0;
}

.wp-container-core-group-is-layout-21>*+* {
    margin-block-start: var(--wp--preset--spacing--xx-small);
    margin-block-end: 0;
}

.wp-container-content-6 {
    flex-basis: 3px;
}

.wp-container-core-group-is-layout-22 {
    flex-wrap: nowrap;
}

.wp-container-core-group-is-layout-23>* {
    margin-block-start: 0;
    margin-block-end: 0;
}

.wp-container-core-group-is-layout-23>*+* {
    margin-block-start: var(--wp--preset--spacing--xx-small);
    margin-block-end: 0;
}

.wp-container-content-7 {
    flex-basis: 3px;
}

.wp-container-core-group-is-layout-24 {
    flex-wrap: nowrap;
}

.wp-container-core-group-is-layout-25>* {
    margin-block-start: 0;
    margin-block-end: 0;
}

.wp-container-core-group-is-layout-25>*+* {
    margin-block-start: var(--wp--preset--spacing--xx-small);
    margin-block-end: 0;
}
/* ... */

